# Stitch

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Docs.md  custom.css
docs/src/: mainpage.md
include/Stitch/: ComponentPool.hpp  Container.hpp  Entity.hpp  Pool.hpp  Pool.ipp  Record.hpp  Scene.hpp  Scene.ipp  Types.hpp  View.hpp
src/: CMakeLists.txt  ComponentPool.cpp  Container.cpp  Pool.cpp  Record.cpp  Scene.cpp  Types.cpp  View.cpp
tests/: CMakeLists.txt  Scene.cpp  View.cpp  idoctest.cpp  idoctest.hpp
tests/src/: Scene.cpp  Sorting.cpp  View.cpp
